@@ -1,3 +1,8 @@
+(07/09/16)
+==========
+
+· Fix issues and improve games/emulator section. Raspberry Pi 3 ready.
+
 (06/09/16)
 ==========
 
